tools/common/tree-sitter-hyperscript/grammar.js
		source_file: ($) =>
			seq(
				repeat($._sep),
				optional(choice(prec(1, $.feature_script), $.command_script)),
			),

		feature_script: ($) => $.feature_sequence,
		command_script: ($) => $.command_sequence_top,

		_sep: (_) => token(/(?:[;\n][ \t\r\f]*)+/),

		_cmd_sep: ($) => choice("then", $._sep),

		feature_sequence: ($) =>
			prec.right(
				seq(
					$.feature,
					repeat(
						choice(
							alias($._behavior_on_feature, $.on_feature),
							alias($._behavior_init_feature, $.init_feature),
							seq($._sep, $.feature),
						),
					),
					optional($._sep),
				),
			),

		command_sequence_top: ($) =>
			prec.right(
				seq(
					$.command_statement,
					repeat(seq(repeat1($._cmd_sep), $.command_statement)),
					optional($._cmd_sep),
				),
			),

		on_feature: ($) =>
			prec.right(
				seq(
					choice("on", alias($._feature_on, "on")),
					field("events", $.event_spec),
					field("body", $.feature_body),
					optional(field("catch", $.catch_block)),
					optional(field("finally", $.finally_block)),
					optional("end"),
				),
			),

		feature_body: ($) => seq(repeat($._cmd_sep), $.command_sequence),

		_behavior_on_feature: ($) =>
			prec.right(
				seq(
					alias($._feature_on, "on"),
					field("events", $.event_spec),
					field("body", $.feature_body),
					optional(field("catch", $.catch_block)),
					optional(field("finally", $.finally_block)),
					optional("end"),
				),
			),

		_behavior_init_feature: ($) =>
			prec.right(
				seq(
					alias($._feature_init, "init"),
					optional("immediately"),
					field("body", $.feature_body),
					optional("end"),
				),
			),

		command_sequence: ($) =>
			prec.right(
				seq(
					$.command_statement,
					repeat(seq(repeat1($._cmd_sep), $.command_statement)),
					optional($._cmd_sep),
				),
			),

		command_statement: ($) =>
			prec.right(
				seq(
					choice($.async_command, $.if_statement, $.repeat_statement, $.command),
					optional(seq("unless", field("unless", $.expression))),
				),
			),

		event_spec: ($) =>
			seq(
				field("event", $.event_binding),
				repeat(seq("or", field("event", $.event_binding))),
				optional(
					seq("queue", field("queue", choice("all", "first", "last", "none"))),
				),
			),

		event_binding: ($) =>
			seq(
				optional("every"),
				field("name", $.event_name),
				optional(field("params", $.param_list)),
				optional(field("filter", $.filter_clause)),
				optional(seq("of", field("of", $.dom_literal))),
				optional(field("count", $.count_filter)),
				optional(seq("from", field("source", $.expression))),
				optional(seq("in", field("in", $.expression))),
				optional(field("rate_limit", $.rate_limit)),
				optional(field("having", $.having_clause)),
			),

		event_name: ($) =>
			choice($.dotted_identifier, $.colon_identifier, $.identifier, $.string),

		set_command: ($) =>
			choice(
				seq(
					"set",
					optional($.scope_modifier),
					field("target", $.expression),
					"to",
					field("value", $.expression),
				),
				seq(
					"set",
					field("value", $.object_literal),
					"on",
					field("target", $.expression),
				),
			),

		_dom_list_item: ($) =>
			choice(
				$.class_literal,
				$.id_literal,
				$.attribute_literal,
				$.query_literal,
				$.attribute_query_literal,
				$.style_property,
			),

		add_command: ($) =>
			seq(
				"add",
				field("what", $.expression),
				repeat(field("what", $._dom_list_item)),
				optional(seq("to", field("target", $.expression))),
				optional(seq("where", field("where", $.expression))),
			),

		log_command: ($) =>
			seq(
				"log",
				optional(
					seq(
						field("value", $.expression),
						repeat(seq(",", field("value", $.expression))),
						optional(seq("with", field("logger", $.expression))),
					),
				),
			),

		expression: ($) => $._logical,

		_logical: ($) => choice($.logical_expression, $._compare),

		identifier: (_) => token(prec(-1, /[A-Za-z_:$][A-Za-z0-9_$]*/)),

		number: (_) => token(choice(/\d+\.\d+/, /\d+/)),

		string: ($) =>
			choice(
				token(seq('"', repeat(choice(/[^"\\\n]/, /\\./)), '"')),
				$._single_string,
			),

		comment: (_) => token(seq("--", /[^\n]*/)),
	},
});
